# cornering-opt

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
scripts/: analyze_baku_t15_speed_sweep.py  run_baku_t15_speed_sweep.py  run_experiment.py  run_toy_case.py
src/cornering/geometry/: centerline.py  curvature.py  path_builder.py
src/cornering/models/: config.py
src/cornering/optimization/: constraints.py  objective.py  solver.py
src/cornering/utils/: baku_t15.py  plotting.py  toy_track.py
